--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,6 @@
 <resources>
     <color name="colorPrimary">#ffd466</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#80cbc4</color>
+    <color name="colorAccent">#35c7ca</color>
+    <color name="transparent">#00ffffff</color>
 </resources>
