--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -10,11 +10,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/background_light"
-        android:orientation="vertical"
-        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="16dp">
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="16dp"
+        android:background="@android:color/background_light"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -36,7 +36,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="102dp"
             android:orientation="horizontal"
             android:weightSum="4">
 
@@ -83,7 +83,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="102dp"
             android:orientation="horizontal"
             android:weightSum="4">
 
@@ -130,7 +130,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="102dp"
             android:orientation="horizontal"
             android:weightSum="4">
 
@@ -177,15 +177,15 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="102dp"
             android:orientation="horizontal"
-            android:weightSum="0">
+            android:weightSum="4">
 
             <LinearLayout
-                android:layout_width="180dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_weight="0"
+                android:layout_weight="2"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -194,6 +194,7 @@
                     android:layout_width="140dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
+                    android:layout_weight="2"
                     android:background="@color/colorAccent"
                     android:gravity="center"
                     android:text="CE"
@@ -202,9 +203,9 @@
 
             <Button
                 android:id="@+id/button2"
-                android:layout_width="91dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="0"
+                android:layout_weight="1"
                 android:background="@color/transparent"
                 android:text="9"
                 android:textColor="@android:color/background_dark"
@@ -214,7 +215,7 @@
                 android:id="@+id/imageButton2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="0"
+                android:layout_weight="1"
                 android:background="@color/transparent"
                 android:src="@drawable/add"
                 app:srcCompat="@drawable/add" />
