--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -37,8 +37,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="102dp"
-            android:orientation="horizontal"
-            android:weightSum="4">
+            android:elevation="1dp"
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/button"
@@ -84,8 +84,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="102dp"
-            android:orientation="horizontal"
-            android:weightSum="4">
+            android:elevation="1dp"
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/button"
@@ -131,8 +131,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="102dp"
-            android:orientation="horizontal"
-            android:weightSum="4">
+            android:elevation="1dp"
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/button"
@@ -178,28 +178,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="102dp"
-            android:orientation="horizontal"
-            android:weightSum="4">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_weight="2"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <Button
-                    android:id="@+id/button4"
-                    android:layout_width="140dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center"
-                    android:layout_weight="2"
-                    android:background="@color/colorAccent"
-                    android:gravity="center"
-                    android:text="CE"
-                    android:textSize="20sp" />
-            </LinearLayout>
+            android:elevation="1dp"
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/button2"
@@ -207,7 +187,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@color/transparent"
-                android:text="9"
+                android:text="3"
                 android:textColor="@android:color/background_dark"
                 android:textSize="30sp" />
 
@@ -217,9 +197,28 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@color/transparent"
-                android:src="@drawable/add"
-                app:srcCompat="@drawable/add" />
+                android:src="@drawable/subtract"
+                app:srcCompat="@drawable/subtract" />
 
+            <Button
+                android:id="@+id/button"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/transparent"
+                android:text="1"
+                android:textColor="@android:color/background_dark"
+                android:textSize="30sp" />
+
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/transparent"
+                android:text="2"
+                android:textColor="@android:color/background_dark"
+                android:textSize="30sp" />
         </LinearLayout>
 
     </LinearLayout>
