--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -186,15 +186,22 @@
             android:elevation="1dp"
             android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/button2"
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
-                android:background="@color/transparent"
-                android:text="3"
-                android:textColor="@android:color/background_dark"
-                android:textSize="30sp" />
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/button2"
+                    android:layout_width="120dp"
+                    android:layout_height="45dp"
+                    android:background="@color/colorAccent"
+                    android:text="CE"
+                    android:textColor="@android:color/background_light"
+                    android:textSize="30sp" />
+            </LinearLayout>
 
             <Button
                 android:id="@+id/button3"
@@ -212,15 +219,15 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@color/transparent"
-                android:src="@drawable/subtract"
-                app:srcCompat="@drawable/subtract" />
+                android:src="@drawable/add"
+                app:srcCompat="@drawable/add" />
         </LinearLayout>
 
     </LinearLayout>
 
     <ImageButton
         android:id="@+id/imageButton"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:background="@color/transparent"
