--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -17,6 +17,7 @@
         android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/numberArea"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
@@ -36,6 +37,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/firstRow"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -73,7 +75,7 @@
                 android:textSize="30sp" />
 
             <ImageButton
-                android:id="@+id/imageButton2"
+                android:id="@+id/divideButton"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -226,13 +228,11 @@
     </LinearLayout>
 
     <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="match_parent"
+        android:id="@+id/equalButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentRight="false"
         android:background="@color/transparent"
-        android:paddingRight="45dp"
-        android:paddingTop="135dp"
         android:src="@drawable/equal"
         app:srcCompat="@drawable/equal" />
 
