--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -231,8 +231,15 @@
         android:id="@+id/equalButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="false"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentTop="false"
+        android:layout_centerHorizontal="false"
+        android:layout_centerInParent="false"
         android:background="@color/transparent"
+        android:paddingRight="50dp"
+        android:paddingTop="160dp"
         android:src="@drawable/equal"
         app:srcCompat="@drawable/equal" />
 
