--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -16,17 +16,14 @@
         android:background="@android:color/background_light"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/numberArea"
-            android:layout_width="match_parent"
+        <RelativeLayout
+            android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_weight="2"
-            android:background="@color/colorAccent"
-            android:orientation="vertical">
+            android:layout_weight="3">
 
             <TextView
                 android:id="@+id/textView2"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="right"
                 android:paddingRight="10dp"
@@ -34,56 +31,72 @@
                 android:text="TextView"
                 android:textSize="35sp" />
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/firstRow"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:elevation="1dp"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/button"
+            <LinearLayout
+                android:id="@+id/firstRow"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/transparent"
-                android:text="7"
-                android:textColor="@android:color/background_dark"
-                android:textSize="30sp" />
+                android:elevation="1dp"
+                android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/button3"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@color/transparent"
-                android:text="8"
-                android:textColor="@android:color/background_dark"
-                android:textSize="30sp" />
+                <Button
+                    android:id="@+id/button"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/transparent"
+                    android:text="7"
+                    android:textColor="@android:color/background_dark"
+                    android:textSize="30sp" />
 
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@color/transparent"
-                android:text="9"
-                android:textColor="@android:color/background_dark"
-                android:textSize="30sp" />
+                <Button
+                    android:id="@+id/button3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/transparent"
+                    android:text="8"
+                    android:textColor="@android:color/background_dark"
+                    android:textSize="30sp" />
+
+                <Button
+                    android:id="@+id/button2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/transparent"
+                    android:text="9"
+                    android:textColor="@android:color/background_dark"
+                    android:textSize="30sp" />
+
+                <ImageButton
+                    android:id="@+id/divideButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/transparent"
+                    android:src="@drawable/divide"
+                    app:srcCompat="@drawable/divide" />
+
+            </LinearLayout>
 
             <ImageButton
-                android:id="@+id/divideButton"
+                android:id="@+id/equalButton"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="false"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentStart="false"
+                android:layout_alignParentTop="false"
+                android:layout_centerHorizontal="false"
+                android:layout_centerInParent="false"
                 android:layout_weight="1"
                 android:background="@color/transparent"
-                android:src="@drawable/divide"
-                app:srcCompat="@drawable/divide" />
-
-        </LinearLayout>
+                android:paddingRight="50dp"
+                android:paddingTop="160dp"
+                android:src="@drawable/equal"
+                app:srcCompat="@drawable/equal" />
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -226,21 +239,5 @@
         </LinearLayout>
 
     </LinearLayout>
-
-    <ImageButton
-        android:id="@+id/equalButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="false"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentStart="false"
-        android:layout_alignParentTop="false"
-        android:layout_centerHorizontal="false"
-        android:layout_centerInParent="false"
-        android:background="@color/transparent"
-        android:paddingRight="50dp"
-        android:paddingTop="160dp"
-        android:src="@drawable/equal"
-        app:srcCompat="@drawable/equal" />
 
 </RelativeLayout>
