--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -22,9 +22,10 @@
             android:layout_weight="3">
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/numberView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/colorAccent"
                 android:gravity="right"
                 android:paddingRight="10dp"
                 android:paddingTop="50dp"
