--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -23,8 +23,9 @@
 
             <TextView
                 android:id="@+id/numberView"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentLeft="false"
                 android:background="@color/colorAccent"
                 android:gravity="right"
                 android:paddingRight="10dp"
@@ -34,8 +35,8 @@
 
             <LinearLayout
                 android:id="@+id/firstRow"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:elevation="1dp"
                 android:orientation="horizontal">
@@ -83,10 +84,10 @@
 
             <ImageButton
                 android:id="@+id/equalButton"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="false"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentRight="false"
                 android:layout_alignParentStart="false"
                 android:layout_alignParentTop="false"
                 android:layout_centerHorizontal="false"
